tests/baselines/reference/checkSuperCallBeforeThisAccessing2.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing2.ts(6,9): error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing2.ts (1 errors) ====
    class Based { }
    class Derived extends Based {
        public x: number;
        constructor() {
            this.x = 100;
            super();
            ~~~~~~~~
!!! error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.
            this.x = 10;
            var that = this;
        }
    }